kubernetes/services/base/recommendation.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "4004"
        prometheus.io/scheme: http
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: rec
          image: edjaz/recommendation/service
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 500Mi
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health/liveness
              port: 4004
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 20
            successThreshold: 1
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health/readiness
              port: 4004
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          volumeMounts:
            - name: config-repo-volume
              mountPath: /config-repo
      volumes:
        - name: config-repo-volume
          configMap:
            name: config-repo-recommendation
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation
spec:
  selector:
    app: recommendation
  ports:
    - port: 8080
      targetPort: 8080
