kubernetes/services/base/ingress-edge-server-ngrok.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edge-ngrok
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer-staging"
spec:
  tls:
    - hosts:
        - d9c1a0fb.ngrok.io
      secretName: tls-ngrok-letsencrypt-certificate
  rules:
    - host: d9c1a0fb.ngrok.io
      http:
        paths:
          - path: /oauth
            backend:
              serviceName: auth-server
              servicePort: 9999
          - path: /product-composite
            backend:
              serviceName: product-composite
              servicePort: 8080
          - path: /actuator/health
            backend:
              serviceName: product-composite
              servicePort: 8080
